Closed
Bug 1371893
Opened 4 years ago
Closed 3 years ago
Stop relying on nsIStringInputStream inheriting from nsIInputStream
Categories
(Thunderbird :: General, defect)
Thunderbird
General
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 57.0
People
(Reporter: bzbarsky, Unassigned)
References
Details
Attachments
(1 file, 1 obsolete file)
I'm going to change that in bug 1371699.
![]() |
Reporter | |
Comment 1•4 years ago
|
||
Attachment #8876364 -
Flags: review?(rkent)
![]() |
Reporter | |
Comment 2•4 years ago
|
||
Note: I have NOT compiled this patch locally or done a try run with it. Assuming it compiles, I believe, based on code inspection for comm-central, that it should do the right thing.
Comment 3•4 years ago
|
||
Made it compile. Boris, happy with those changes? Try run is here, I'll comment later on the result: https://treeherder.mozilla.org/#/jobs?repo=try-comm-central&revision=09b17530481d24ca49aff452258d052134c073f2
Attachment #8876364 -
Attachment is obsolete: true
Attachment #8876364 -
Flags: review?(rkent)
Attachment #8876373 -
Flags: feedback?(bzbarsky)
Updated•4 years ago
|
Attachment #8876373 -
Attachment is patch: true
Comment 4•4 years ago
|
||
I had to lose the const due to this error: c:/mozilla-source/comm-central/calendar/base/backend/libical/calICSService.cpp(1012): error C2664: 'nsresult CallQueryInterface<nsIStringInputStream,nsIInputStream>(nsCOMPtr<nsIStringInputStream> &,DestinationType **)': cannot convert argument 1 from 'const nsCOMPtr<nsIStringInputStream>' to 'nsCOMPtr<nsIStringInputStream> &' with [ DestinationType=nsIInputStream ] c:/mozilla-source/comm-central/calendar/base/backend/libical/calICSService.cpp(1012): note: Conversion loses qualifiers
Comment 5•4 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try-comm-central&revision=09b17530481d24ca49aff452258d052134c073f2 is "green". Intermittent failure on Mac xpcshell-test, Mozmill is red due to bug 1371898.
Comment 6•4 years ago
|
||
Comment on attachment 8876373 [details] [diff] [review] Stop relying on nsIStringInputStream inheriting from nsIInputStream in comm-central code (v2). The changes look OK to me. Thanks for taking care of Thunderbird :-) Feel free to request review from Kent.
Attachment #8876373 -
Flags: review+
![]() |
Reporter | |
Comment 7•4 years ago
|
||
Comment on attachment 8876373 [details] [diff] [review] Stop relying on nsIStringInputStream inheriting from nsIInputStream in comm-central code (v2). Thanks for fixing up the compile issues. Looks good to me! It's basically up to you whether you think review from Kent is needed. If you feel competent to review the changes, I'm good with it, I think.
Attachment #8876373 -
Flags: feedback?(bzbarsky) → feedback+
Comment 8•4 years ago
|
||
Comment on attachment 8876373 [details] [diff] [review] Stop relying on nsIStringInputStream inheriting from nsIInputStream in comm-central code (v2). When are you going to land bug 1371699? Do you think we should land this patch here now so we don't have to track the other bug? I put r?rkent just in case. Of course if Kent's review hasn't arrived before the patch is needed, I'll land it with my review only.
Attachment #8876373 -
Flags: review?(rkent)
![]() |
Reporter | |
Comment 9•4 years ago
|
||
> When are you going to land bug 1371699?
Well, seeing as I don't have patches up yet and need reviews... Certainly not until Monday. More likely a few days after that.
Comment 10•4 years ago
|
||
Comment on attachment 8876373 [details] [diff] [review] Stop relying on nsIStringInputStream inheriting from nsIInputStream in comm-central code (v2). Review of attachment 8876373 [details] [diff] [review]: ----------------------------------------------------------------- Looks good to me.
Attachment #8876373 -
Flags: review?(rkent) → review+
Comment 11•4 years ago
|
||
This now ports bug 1401171.
Comment 12•4 years ago
|
||
Pushed by mozilla@jorgk.com: https://hg.mozilla.org/comm-central/rev/4ff3727aec0f Stop relying on nsIStringInputStream inheriting from nsIInputStream in comm-central code. r=jorgk,rkent
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Updated•4 years ago
|
Target Milestone: --- → Thunderbird 57.0
Comment 13•3 years ago
|
||
Pushed by mozilla@jorgk.com: https://hg.mozilla.org/comm-central/rev/e570d6d99079 Backed out changeset 4ff3727aec0f as experiment to see whether it's related to crash in bug 1408175. a=jorgk
Updated•3 years ago
|
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 14•3 years ago
|
||
Pushed by mozilla@jorgk.com: https://hg.mozilla.org/comm-central/rev/8cd587465eab Stop relying on nsIStringInputStream inheriting from nsIInputStream in comm-central code. r=jorgk,rkent
Status: REOPENED → RESOLVED
Closed: 4 years ago → 3 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•