Bug 1371893 - Stop relying on nsIStringInputStream inheriting from nsIInputStream in comm-central code. r=jorgk,rkent